# telegram-afk-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  state.py  utils.py
